behind-the-scene

--- a/about-us.html
+++ b/about-us.html
@@ -589,7 +589,7 @@
                       </div>
                       <div class="secondary-button-bg"></div>
                     </a></div>
-                  <div data-w-id="ed95dd01-b540-7846-96ad-46b9166257b7"
+                  <!-- <div data-w-id="ed95dd01-b540-7846-96ad-46b9166257b7"
                     style="-webkit-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 60px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                     class="out-story-behind-block top-48px-gap">
                     <div class="behind-the-scene-text-block">
@@ -607,7 +607,7 @@
                         data-w-id="0b5f7ffe-5155-ecbe-3b55-d852c2fee98d" sizes="(max-width: 645px) 100vw, 645px"
                         alt="Behind The scene Image" srcset="assets/Doctor-Patient Interaction_converted.avif 645w"
                         class="behind-the-scene-image"></div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
