--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Karunya Charitable Trustt</title>
+  <title>Karunya Charitable Trust</title>
   <meta
     content="Born from a moment of deep realization, our trust works to ensure life-saving medical care and diagnostics are accessible to all, easing silent suffering through compassion and timely support."
     name="description">
