--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -31,13 +31,14 @@
                         <input type="password" id="password" placeholder="Password" required
                             style="width: 100%; padding-right: 40px;">
                         <span id="toggle-password"
-                            style="position: absolute; right: 12px; top: 22px; transform: translateY(-50%); cursor: pointer; user-select: none;">ðŸ‘ï¸</span>
+                            style="position: absolute; right: 12px; top: 22px; transform: translateY(-50%); cursor: pointer; user-select: none;">👁️
+                        </span>
                     </div>
                     <button type="submit">Login</button>
                     <p id="login-error" class="error"></p>
                 </form>
             </div>
-        </div> 
+        </div>
 
         <!-- Dashboard Section -->
         <div id="dashboard-view" class="view hidden">
@@ -217,4 +218,3 @@
 </body>
 
 </html>
-
