--- a/donate.html
+++ b/donate.html
@@ -12,12 +12,12 @@
   <meta
     content="Born from a moment of deep realization, our trust works to ensure life-saving medical care and diagnostics are accessible to all, easing silent suffering through compassion and timely support."
     property="og:description">
-  
+
   <meta content="Karunya Charitable Trust" property="twitter:title">
   <meta
     content="Born from a moment of deep realization, our trust works to ensure life-saving medical care and diagnostics are accessible to all, easing silent suffering through compassion and timely support."
     property="twitter:description">
-  
+
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -436,7 +436,7 @@
                       </div>
 
                       <!-- WhatsApp CTA Button -->
-                      <a href="https://wa.me/916238719566?text=Hello%2C%20I%20have%20completed%20a%20donation.%20Please%20find%20the%20payment%20screenshot%20attached."
+                      <a href="https://wa.me/9072023111?text=Hello%2C%20I%20have%20completed%20a%20donation.%20Please%20find%20the%20payment%20screenshot%20attached."
                         target="_blank" id="whatsapp-cta" data-wf--tertiary-button--variant="varient-3"
                         class="tertiary-button w-variant-ca016c73-1015-7e41-ddfe-6dc36e317ed6 w-inline-block"
                         style="background-color: #3B5D98; border-color: #3B5D98; color: white; width: 100%; text-decoration: none; display: flex; justify-content: center; align-items: center; padding: 16px 20px; border-radius: 8px;">
@@ -569,8 +569,8 @@
         </div>
         <div class="footer-middle-block">
           <div class="footer-single-column-block is-1"><a href="index.htm" aria-current="page"
-              class="footer-logo-link w-inline-block w--current"><img loading="lazy" src="images/chkarunyatrustlogo-footer.png"
-                alt="Footer Logo" class="footer-logo"></a>
+              class="footer-logo-link w-inline-block w--current"><img loading="lazy"
+                src="images/chkarunyatrustlogo-footer.png" alt="Footer Logo" class="footer-logo"></a>
             <div class="footer-contact-info-block">
               <div class="footer-location-and-email-block">
                 <div class="footer-location">Together, we bring relief. Every effort you make builds a better future.
@@ -619,8 +619,8 @@
 
               </div>
               <div class="footer-cta-block w-form">
-                <form action="https://formspree.io/f/mwvvdbnp" method="POST" id="email-form" name="email-form" data-name="Email Form"
-                  class="footer-cta-form-block" data-wf-page-id="68abe6353889f23ffa0aeb78"
+                <form action="https://formspree.io/f/mwvvdbnp" method="POST" id="email-form" name="email-form"
+                  data-name="Email Form" class="footer-cta-form-block" data-wf-page-id="68abe6353889f23ffa0aeb78"
                   data-wf-element-id="de53e137-6b24-e284-c2d4-17ee8b13056c"
                   data-turnstile-sitekey="0x4AAAAAAAQTptj2So4dx43e"><input class="footer-cta-input w-input"
                     maxlength="256" name="name-2" data-name="Name 2" placeholder="Type Your Email*" type="email"
@@ -687,7 +687,7 @@
   <script src="gsap/3.13.0/ScrambleTextPlugin.min.js" type="text/javascript" defer></script>
   <script src="gsap/3.13.0/TextPlugin.min.js" type="text/javascript" defer></script>
   <script type="text/javascript">gsap.registerPlugin(ScrollTrigger, SplitText, ScrambleTextPlugin, TextPlugin);</script>
-  
+
 
   <!-- Logic for QR Donation Flow -->
   <script>
@@ -739,4 +739,3 @@
 </body>
 
 </html>
-
