--- a/index.htm
+++ b/index.htm
@@ -754,7 +754,7 @@
                           <p class="causes-item-summary">Receiving an affordable MRI helped her continue treatment with
                             confidence, proving compassionate healthcare truly transforms lives.</p>
                           <div class="causes-link-button-block"><a
-                              href="causes/provide-free-foods-relief-for-orphans.html"
+                              href="blog.html"
                               class="causes-link-button w-inline-block">
                               <div class="link-button-text">Explore Program</div>
                               <div class="link-button-arrow w-embed"><svg width="18" height="13" viewbox="0 0 18 13"
@@ -810,7 +810,7 @@
                           <p class="causes-item-summary">Subsidized ECHO and essential tests gave him immediate support,
                             ensuring his treatment started without delay or financial burden.</p>
                           <div class="causes-link-button-block"><a
-                              href="causes/delivering-hope-through-daily-meals.html"
+                              href="blog.html"
                               class="causes-link-button w-inline-block">
                               <div class="link-button-text">Explore Program</div>
                               <div class="link-button-arrow w-embed"><svg width="18" height="13" viewbox="0 0 18 13"
