--- a/index.htm
+++ b/index.htm
@@ -1532,7 +1532,7 @@
                         <div class="blog-item-info-dot"></div>
                         <div class="blog-item-date-text">July 27, 2025</div>
                       </div><a aria-label="Blog Item Title"
-                        href="#"
+                        href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">Volunteer Stories That Inspire Generous Hearts</h3>
                       </a>
@@ -1546,7 +1546,6 @@
                         loading="lazy"
                         style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);filter:blur(10px)"
                         data-w-id="9091b12a-4088-be3f-aee9-6ec473be7fee" alt="Blog Item Thumbnail" sizes="100vw"
-                        srcset="68ad3e12591a81fed1f9da20/68ad8fa9e492f2b844f2bcda_Blog%20Thumbnail%205-min-p-500.jpg 500w, 68ad3e12591a81fed1f9da20/68ad8fa9e492f2b844f2bcda_Blog%20Thumbnail%205-min.jpg 645w"
                         class="blog-item-thumbnail"></a>
                     <div class="blog-item-content-block">
                       <div class="blog-item-info-block">
@@ -1554,7 +1553,7 @@
                         <div class="blog-item-info-dot"></div>
                         <div class="blog-item-date-text">July 16, 2025</div>
                       </div><a aria-label="Blog Item Title"
-                        href="#"
+                        href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">Small Donations Creating Community Impact</h3>
                       </a>
@@ -1568,15 +1567,14 @@
                         loading="lazy"
                         style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);filter:blur(10px)"
                         data-w-id="9091b12a-4088-be3f-aee9-6ec473be7fee" alt="Blog Item Thumbnail" sizes="100vw"
-                        srcset="68ad3e12591a81fed1f9da20/68ad8f6a6944ec2a466a09cc_Blog%20Thumbnail%204-min-p-500.jpg 500w, 68ad3e12591a81fed1f9da20/68ad8f6a6944ec2a466a09cc_Blog%20Thumbnail%204-min.jpg 645w"
                         class="blog-item-thumbnail"></a>
                     <div class="blog-item-content-block">
                       <div class="blog-item-info-block">
                         <div class="blog-item-category-text">Charity</div>
                         <div class="blog-item-info-dot"></div>
-                        <div class="blog-item-date-text">June 16, 2025</div>
+                        <div class="blog-item-date-text">January 16, 2026</div>
                       </div><a aria-label="Blog Item Title"
-                        href="#"
+                        href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">How Charity Efforts Build a Better Tomorrow</h3>
                       </a>
