--- a/public/admin/preview.html
+++ b/public/admin/preview.html
@@ -10,8 +10,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
     <!-- Use exact same CSS as real site -->
-    <link href="/../68abe6343889f23ffa0aeb59/css/drolix.webflow.shared.26390e02e.css" rel="stylesheet"
-        type="text/css">
+    <link href="/../68abe6343889f23ffa0aeb59/css/drolix.webflow.shared.26390e02e.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript" defer></script>
@@ -63,8 +62,8 @@
                 data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="header-max-width">
                     <div class="navbar-wrapper"><a id="w-node-_216321ad-c76d-ce85-c124-cbfb5723be49-5723be45" href="#"
-                            class="navbar-brand w-nav-brand"><img loading="lazy"
-                                src="/../images/chkarunyatrustlogo.png" alt="Nav Logo" class="nav-logo"></a>
+                            class="navbar-brand w-nav-brand"><img loading="lazy" src="/../images/chkarunyatrustlogo.png"
+                                alt="Nav Logo" class="nav-logo"></a>
                         <nav role="navigation" id="w-node-_216321ad-c76d-ce85-c124-cbfb5723be4b-5723be45"
                             class="nav-menu-wrapper w-nav-menu">
                             <ul role="list" class="nav-menu w-list-unstyled">
@@ -130,7 +129,7 @@
                                     <h2 id="preview-subheading"
                                         style="color: #4A6FA5; margin-top: 24px; margin-bottom: 16px; font-weight: 600; display: none;">
                                     </h2>
-                                    
+
                                     <!-- TARGET: Content -->
                                     <div id="preview-content">
                                         <h3>Start writing...</h3>
@@ -150,17 +149,17 @@
                 <!-- Footer Content Simplified but visual matches -->
                 <div class="footer-wrapper">
                     <div class="footer-lower-text-block">
-                        <div class="footer-lower-text">Copyright © Karunya Charitable Trust</div>
+                        <div class="footer-lower-text">Copyright &copy; Karunya Charitable Trust</div>
                     </div>
                 </div>
             </div>
         </footer>
     </div>
     <script src="/../js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" defer></script>
-    <script src="/../68abe6343889f23ffa0aeb59/js/webflow.schunk.36b8fb49256177c8.js" type="text/javascript" defer></script>
-    <script src="/../68abe6343889f23ffa0aeb59/js/webflow.5d4dd21f.90daaba495d2edf4.js"
-        type="text/javascript" defer></script>
+    <script src="/../68abe6343889f23ffa0aeb59/js/webflow.schunk.36b8fb49256177c8.js" type="text/javascript"
+        defer></script>
+    <script src="/../68abe6343889f23ffa0aeb59/js/webflow.5d4dd21f.90daaba495d2edf4.js" type="text/javascript"
+        defer></script>
 </body>
 
 </html>
-
