--- a/index.htm
+++ b/index.htm
@@ -1519,10 +1519,8 @@
               class="blog-collection-list-block w-dyn-list">
               <div role="list" class="blog-collection-list w-dyn-items">
                 <div role="listitem" class="blog-collection-item w-dyn-item">
-                  <div class="blog-item-block"><a href="#"
-                      class="blog-item-thumbnail-block w-inline-block"><img
-                        src="assets/Family Support Scene_converted.avif"
-                        loading="lazy"
+                  <div class="blog-item-block"><a href="#" class="blog-item-thumbnail-block w-inline-block"><img
+                        src="assets/Family Support Scene_converted.avif" loading="lazy"
                         style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);filter:blur(10px)"
                         data-w-id="9091b12a-4088-be3f-aee9-6ec473be7fee" alt="Blog Item Thumbnail" sizes="100vw"
                         class="blog-item-thumbnail"></a>
@@ -1531,8 +1529,7 @@
                         <div class="blog-item-category-text">Community</div>
                         <div class="blog-item-info-dot"></div>
                         <div class="blog-item-date-text">July 27, 2025</div>
-                      </div><a aria-label="Blog Item Title"
-                        href="blog.html"
+                      </div><a aria-label="Blog Item Title" href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">Volunteer Stories That Inspire Generous Hearts</h3>
                       </a>
@@ -1540,8 +1537,7 @@
                   </div>
                 </div>
                 <div role="listitem" class="blog-collection-item w-dyn-item">
-                  <div class="blog-item-block"><a href="#"
-                      class="blog-item-thumbnail-block w-inline-block"><img
+                  <div class="blog-item-block"><a href="#" class="blog-item-thumbnail-block w-inline-block"><img
                         src="assets/family-visiting-elderly-senior-woman-patient-while-wearing-protective-face-mask_converted.avif"
                         loading="lazy"
                         style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);filter:blur(10px)"
@@ -1552,8 +1548,7 @@
                         <div class="blog-item-category-text">Community</div>
                         <div class="blog-item-info-dot"></div>
                         <div class="blog-item-date-text">July 16, 2025</div>
-                      </div><a aria-label="Blog Item Title"
-                        href="blog.html"
+                      </div><a aria-label="Blog Item Title" href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">Small Donations Creating Community Impact</h3>
                       </a>
@@ -1561,10 +1556,8 @@
                   </div>
                 </div>
                 <div role="listitem" class="blog-collection-item w-dyn-item">
-                  <div class="blog-item-block"><a href="#"
-                      class="blog-item-thumbnail-block w-inline-block"><img
-                        src="assets/Help Desk - Professionalism_converted.avif"
-                        loading="lazy"
+                  <div class="blog-item-block"><a href="#" class="blog-item-thumbnail-block w-inline-block"><img
+                        src="assets/Help Desk - Professionalism_converted.avif" loading="lazy"
                         style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.6, 1.6, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);filter:blur(10px)"
                         data-w-id="9091b12a-4088-be3f-aee9-6ec473be7fee" alt="Blog Item Thumbnail" sizes="100vw"
                         class="blog-item-thumbnail"></a>
@@ -1573,8 +1566,7 @@
                         <div class="blog-item-category-text">Charity</div>
                         <div class="blog-item-info-dot"></div>
                         <div class="blog-item-date-text">January 16, 2026</div>
-                      </div><a aria-label="Blog Item Title"
-                        href="blog.html"
+                      </div><a aria-label="Blog Item Title" href="blog.html"
                         class="blog-item-title-block w-inline-block">
                         <h3 class="blog-item-title">How Charity Efforts Build a Better Tomorrow</h3>
                       </a>
@@ -1805,13 +1797,39 @@
             </div> -->
             <div class="footer-single-column-block">
               <div class="footer-menu-title">Contact</div>
-              <div class="footer-menu-block">
-                <div class="footer-location">3rd floor,<br>Thattil Buildings</div>
-                <div class="footer-location">Chirakkulam Rd,Opp. Sree Padmam Pharma, Statue,Thiruvananthapuram</div>
 
-                <div class="footer-location">Kerala 695001</div>
-              </div>
+              <address class="footer-address" style="margin-top: 15px;">
+                3rd Floor, <br> Thattil Buildings,<br />
+                Chirakkulam Road<br />
+                <span class="no-wrap">Opp. Sree Padmam Pharma</span><br />
+                <span class="no-wrap">Statue, Thiruvananthapuram</span><br />
+                Kerala – 695001
+              </address>
             </div>
+
+
+            <style>
+              .footer-address {
+                font-style: normal;
+                line-height: 1.7;
+                font-size: 18px;
+                color: #ffffff;
+                max-width: 320px;
+                /* important for footer balance */
+              }
+
+              .no-wrap {
+                white-space: nowrap;
+              }
+
+              @media (max-width: 768px) {
+                .footer-address {
+                  font-size: 16px;
+                  /* optional but recommended */
+                  line-height: 1.6;
+                }
+              }
+            </style>
 
           </div>
         </div>
