--- a/about-us.html
+++ b/about-us.html
@@ -1817,13 +1817,39 @@
             </div> -->
             <div class="footer-single-column-block">
               <div class="footer-menu-title">Contact</div>
-              <div class="footer-menu-block">
-                <div class="footer-location">3rd floor,<br>Thattil Buildings</div>
-                <div class="footer-location">Chirakkulam Rd,Opp. Sree Padmam Pharma, Statue,Thiruvananthapuram</div>
 
-                <div class="footer-location">Kerala 695001</div>
-              </div>
+              <address class="footer-address" style="margin-top: 15px;">
+                3rd Floor, <br> Thattil Buildings,<br />
+                Chirakkulam Road<br />
+                <span class="no-wrap">Opp. Sree Padmam Pharma</span><br />
+                <span class="no-wrap">Statue, Thiruvananthapuram</span><br />
+                Kerala – 695001
+              </address>
             </div>
+
+
+            <style>
+              .footer-address {
+                font-style: normal;
+                line-height: 1.7;
+                font-size: 18px;
+                color: #ffffff;
+                max-width: 320px;
+                /* important for footer balance */
+              }
+
+              .no-wrap {
+                white-space: nowrap;
+              }
+
+              @media (max-width: 768px) {
+                .footer-address {
+                  font-size: 16px;
+                  /* optional but recommended */
+                  line-height: 1.6;
+                }
+              }
+            </style>
 
           </div>
         </div>
