--- a/contact.html
+++ b/contact.html
@@ -360,7 +360,7 @@
                   <div class="information-text"><a href="tel:9072023111"
                       class="information-link-text">9072023111</a><br>
                     <a href="tel:9072034222" class="information-link-text">9072034222</a><br>
-                    <a href="tel:9072045333" class="information-link-text">9072045333</a> 
+                    <a href="tel:9072045333" class="information-link-text">9072045333</a> <br>
                     <a href="tel:8137855114" class="information-link-text">8137855114</a>
                   </div>
                 </div>
