--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
               class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu w-list-unstyled">
                 <li class="list-item mobile-logo"><a href="index.htm" class="navbar-brand w-nav-brand"><img
-                      loading="lazy" src="images/chkarunyatrustlogo.png"
-                      alt="Nav Logo" class="nav-logo mobile"></a></li>
+                      loading="lazy" src="images/chkarunyatrustlogo.png" alt="Nav Logo" class="nav-logo mobile"></a>
+                </li>
                 <li class="list-item"><a href="index.htm" class="nav-link">Home</a></li>
                 <li class="list-item mobile-none">
                   <div class="nav-dot"></div>
@@ -363,6 +363,14 @@
                     <a href="tel:9072045333" class="information-link-text">9072045333</a><br>
                     <a href="tel:8137855114" class="information-link-text">8137855114</a>
                   </div>
+                  <style>
+                    .information-link-text {
+                      font-size: 18px;
+                      color: #ffffff;
+                      text-decoration: none;
+                      font-variant-numeric: tabular-nums;
+                    }
+                  </style>
                 </div>
               </div>
             </div>
@@ -532,8 +540,8 @@
           </div>
           <div class="footer-middle-block">
             <div class="footer-single-column-block is-1"><a href="index.htm" aria-current="page"
-                class="footer-logo-link w-inline-block w--current"><img loading="lazy" src="images/chkarunyatrustlogo-footer.png" alt="Footer Logo"
-                  class="footer-logo"></a>
+                class="footer-logo-link w-inline-block w--current"><img loading="lazy"
+                  src="images/chkarunyatrustlogo-footer.png" alt="Footer Logo" class="footer-logo"></a>
               <div class="footer-contact-info-block">
                 <div class="footer-location-and-email-block">
                   <div class="footer-location">Together, we bring relief. Every effort you make builds a better future.
@@ -582,8 +590,8 @@
 
                 </div>
                 <div class="footer-cta-block w-form">
-                  <form action="https://formspree.io/f/mwvvdbnp" method="POST" id="email-form" name="email-form" data-name="Email Form"
-                    class="footer-cta-form-block" data-wf-page-id="68abe6353889f23ffa0aeb78"
+                  <form action="https://formspree.io/f/mwvvdbnp" method="POST" id="email-form" name="email-form"
+                    data-name="Email Form" class="footer-cta-form-block" data-wf-page-id="68abe6353889f23ffa0aeb78"
                     data-wf-element-id="de53e137-6b24-e284-c2d4-17ee8b13056c"
                     data-turnstile-sitekey="0x4AAAAAAAQTptj2So4dx43e"><input class="footer-cta-input w-input"
                       maxlength="256" name="name-2" data-name="Name 2" placeholder="Type Your Email*" type="email"
