--- a/contact.html
+++ b/contact.html
@@ -365,8 +365,8 @@
                   </div>
                   <style>
                     .information-link-text {
-                      font-size: 18px;
-                      color: #ffffff;
+                      font-size: 19px;
+                      color: #000000;
                       text-decoration: none;
                       font-variant-numeric: tabular-nums;
                     }
