--- a/contact.html
+++ b/contact.html
@@ -357,14 +357,14 @@
                   <div class="support-icon-block"><img
                       src="68abe6343889f23ffa0aeb59/68b574d01c85c8ff9d1ba013_Call%20Icon.svg" loading="lazy"
                       alt="Support Icon" class="support-icon"></div>
-                  <div class="information-text">
+                  <div class="information-text-s">
                     <a href="tel:9072023111" class="information-link-text">9072023111</a><br>
                     <a href="tel:9072034222" class="information-link-text">9072034222</a><br>
                     <a href="tel:9072045333" class="information-link-text">9072045333</a><br>
                     <a href="tel:8137855114" class="information-link-text">8137855114</a>
                   </div>
                   <style>
-                    .information-link-text {
+                    .information-link-text-s {
                       font-size: 19px;
                       color: #000000;
                       text-decoration: none;
