--- a/service/affordable-services.html
+++ b/service/affordable-services.html
@@ -355,17 +355,17 @@
               </div>
               <div class="our-journey-content-block">
                 <div data-w-id="e241ff2d-6fe9-9bf0-af9f-1d1d001fea78" class="our-journey-image-block"><img
-                    src="../68abe6343889f23ffa0aeb59/68da6062b54149975ca3cf3d_Our%20Journey%20Image.jpg" loading="lazy"
+                    src="../assets/mri_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image"><img
-                    src="../68abe6343889f23ffa0aeb59/68db4bf79085421eb98b16f5_Our%20Journey%20Image%206.jpg" loading="lazy"
+                    src="../assets/Modern CT Scanner - Warm Light_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-2"><img
-                    src="../68abe6343889f23ffa0aeb59/68db4bf64ad5f85bfb9d984f_Our%20Journey%20Image%205.jpg" loading="lazy"
+                    src="../assets/MRI Scanner - Golden Hour Bore_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-3"><img
-                    src="../68abe6343889f23ffa0aeb59/68db4bf67169079fbdec07a4_Our%20Journey%20Image%204.jpg" loading="lazy"
+                    src="../assets/echo.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-4"><img
-                    src="../68abe6343889f23ffa0aeb59/68db4bf7c1730e738bdaed1d_Our%20Journey%20Image%202.jpg" loading="lazy"
+                    src="../assets/scan_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-5"><img
-                    src="../68abe6343889f23ffa0aeb59/68db4bf7810edb6afa65cd3a_45c863936f54bb16b4fc7b75cf881b08_Our%20Journey%20Image%203.jpg"
+                    src="../assets/bloodtest_converted.avif"
                     loading="lazy" alt="Our Journey Image" class="our-journey-image is-6">
                   <div class="image-overlay"></div>
                 </div>
