--- a/service/affordable-services.html
+++ b/service/affordable-services.html
@@ -359,11 +359,11 @@
                     alt="Our Journey Image" class="our-journey-image"><img
                     src="../assets/Modern CT Scanner - Warm Light_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-2"><img
-                    src="../assets/MRI Scanner - Golden Hour Bore_converted.avif" loading="lazy"
-                    alt="Our Journey Image" class="our-journey-image is-3"><img
                     src="../assets/echo.avif" loading="lazy"
-                    alt="Our Journey Image" class="our-journey-image is-4"><img
+                    alt="Our Journey Image" class="our-journey-image is-3"><img
                     src="../assets/scan_converted.avif" loading="lazy"
+                    alt="Our Journey Image" class="our-journey-image is-4"><img
+                    src="../assets/bloodtest_converted.avif" loading="lazy"
                     alt="Our Journey Image" class="our-journey-image is-5"><img
                     src="../assets/bloodtest_converted.avif"
                     loading="lazy" alt="Our Journey Image" class="our-journey-image is-6">
