--- a/index.htm
+++ b/index.htm
@@ -38,7 +38,15 @@
   <link rel="shortcut icon" href="favicon/favicon.ico">
   <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="favicon/android-chrome-512x512.png">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17939127173"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17939127173');
+</script>
 </head>
 
 <body class="body">
